all but ball added

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexbox Review</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Flexbox Review</title>
 
-    <link rel='stylesheet' href="reset.css" />
-    <link rel='stylesheet' href="index.css" />
-</head>
-<body>
-    
-</body>
+        <link rel='stylesheet' href="reset.css" />
+        <link rel='stylesheet' href="index.css" />
+    </head>
+    <body>
+        <section id='left-pockets'>
+            <div class="pockets top"></div>
+            <div class="pockets"></div>
+            <div class="pockets bottom"></div>
+        </section>
+        <section id='right-pockets'>
+            <div class="pockets top"></div>
+            <div class="pockets"></div>
+            <div class="pockets bottom"></div>
+        </section>
+    </body>
 </html>
